Update travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
   global:
-    - CC_TEST_REPORTER_ID=
+    - CC_TEST_REPORTER_ID=9631164989041416a2f98ef90e99fd64b885b3b6a8ba029bc315708e82207b0c
 language: go
 go:
   - 1.9.x
