--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
-  - go test -coverprofile=c.out -covermode=atomic
+  # Build test mocks
+  - ./build-test-fixtures.sh
+  # Run tests
+  - go test ./... -coverprofile=c.out -covermode=atomic
 after_script:
   - ./cc-test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
