--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
 env:
   global:
+    - GO111MODULE=on
     - CC_TEST_REPORTER_ID=9631164989041416a2f98ef90e99fd64b885b3b6a8ba029bc315708e82207b0c
+
+dist: xenial
 language: go
 go:
+  - 1.11.x
   - tip
+install: go mod vendor
+script:
+  - ./build-test-fixtures.sh
+  - go test -mod vendor -coverprofile=c.out -covermode=atomic
+
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-script:
-  # Build test mocks
-  - ./build-test-fixtures.sh
-  # Run tests
-  - go test ./... -coverprofile=c.out -covermode=atomic
 after_script:
   - ./cc-test-reporter after-build --coverage-input-type gocov --exit-code $TRAVIS_TEST_RESULT
